# ferust

./: .gitignore  Cargo.toml  IPStresses_Biaxial_Q4_2x2.txt  NodalStressAndDisp_Biaxial_Q4_2x2.txt  README.md  generate.py  local_stiffness.m.tmpl  run_me.m
.github/workflows/: build.yml
matlab/: Read_input.m  Solver.m  compare.m  euler_sol.m  local_force.m  local_interpolation.m  local_projection.m  local_projection_4.m  local_projection_9.m  local_stiffness.m  local_values.m  local_values_4.m  local_values_9.m  plot_al_lines.m  plot_compressibility_amount.m  plot_compressibility_mesh.m  plot_integration_error.m  plot_mesh_error.m  plot_slices.m  run_me.m
report/: report.md
src/: ferust.h  lib.rs
templates/: local_force.m.tmpl  local_interpolation.m.tmpl  local_projection.m.tmpl  local_stiffness.m.tmpl  local_values.m.tmpl
